--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# ============================================
+# DEPENDENCIES
+# ============================================
 /node_modules
 /.pnp
 .pnp.*
@@ -10,32 +12,102 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
+# ============================================
+# TESTING
+# ============================================
 /coverage
 
-# next.js
+# ============================================
+# NEXT.JS
+# ============================================
 /.next/
 /out/
+.next
+.turbo
 
-# production
+# ============================================
+# PRODUCTION
+# ============================================
 /build
+/dist
 
-# misc
-.DS_Store
-*.pem
+# ============================================
+# ENVIRONMENT VARIABLES (IMPORTANTE)
+# ============================================
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
 
-# debug
+# ============================================
+# VERCEL
+# ============================================
+.vercel
+
+# ============================================
+# TYPESCRIPT
+# ============================================
+*.tsbuildinfo
+next-env.d.ts
+
+# ============================================
+# LOGS
+# ============================================
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# ============================================
+# SISTEMA OPERATIVO
+# ============================================
+.DS_Store
+*.pem
+Thumbs.db
+Desktop.ini
 
-# vercel
-.vercel
+# ============================================
+# IDE / EDITORES
+# ============================================
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# ============================================
+# PRISMA
+# ============================================
+# Solo ignora migraciones locales, pero mantén la estructura
+prisma/migrations/migration_lock.toml
+# Si quieres versionar las migraciones, comenta la línea anterior
+
+# ============================================
+# UPLOADS Y ARCHIVOS DE USUARIOS
+# ============================================
+public/uploads/
+public/temp/
+uploads/
+
+# ============================================
+# BASE DE DATOS LOCAL (si usas SQLite)
+# ============================================
+*.db
+*.db-journal
+*.sqlite
+*.sqlite3
+
+# ============================================
+# OTROS
+# ============================================
+.cache
+.temp
+tmp/
+*.tmp
