--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
     "bcrypt": "^6.0.0",
+    "critters": "^0.0.23",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
