--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.0",
+    "@vercel/blob": "^2.0.0",
     "bcrypt": "^6.0.0",
     "critters": "^0.0.23",
     "lucide-react": "^0.525.0",
