--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "login-app",
-  "version": "0.1.0",
+  "name": "sistema-practicas",
+  "version": "1.0.0",
   "private": true,
+  "main": "electron.js",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "electron": "electron .",
+    "electron:build": "electron-builder"
   },
   "prisma": {
     "seed": "node scripts/seed.js"
@@ -29,9 +32,26 @@
     "@types/node": "24.0.10",
     "@types/react": "19.1.8",
     "autoprefixer": "^10.4.22",
+    "electron": "^33.4.11",
+    "electron-builder": "^25.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18"
+  },
+  "build": {
+    "appId": "com.sistemapracticas.app",
+    "productName": "Sistema de Prácticas",
+    "win": {
+      "target": "nsis",
+      "icon": "public/favicon.ico"
+    },
+    "files": [
+      "electron.js",
+      "public/**/*"
+    ],
+    "directories": {
+      "output": "dist"
+    }
   }
 }
